# collobrative-notepad

./: CMakeLists.txt
apps/: index.html
src/: notepadSever.cpp
